Stuff finally works

--- a/centos7-django/Dockerfile
+++ b/centos7-django/Dockerfile
@@ -7,11 +7,14 @@ RUN rpm -ivh http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-5.no
 RUN yum upgrade -y -q
 RUN yum install -y -q python-pip \
                       supervisor \
-					  nginx
+					  nginx \
+					  mysql-devel \
+					  gcc \
+					  python-devel
 RUN pip install django MySQL-python gunicorn
 
 COPY supervisord_djangoapp.ini /etc/supervisord.d/djangoapp.ini
-COPY nginx_djangoapp.conf /etc/nginx/conf.d/djangoapp.confA
+COPY nginx_djangoapp.conf /etc/nginx/conf.d/djangoapp.conf
 
 # RUN nginx -s stopA
 # RUN kill $(cat /var/run/supervisord.pid)
