--- a/terra-nomad/Dockerfile
+++ b/terra-nomad/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Marcos Sánchez <arkanus@gmail.com>
 ENV NOMAD_DOWNLOAD_URL=https://releases.hashicorp.com/nomad/0.8.6/nomad_0.8.6_linux_amd64.zip\
 	TERRAFORM_DOWNLOAD_URL=https://releases.hashicorp.com/terraform/0.11.8/terraform_0.11.8_linux_amd64.zip\
 
-RUN apk add --no-cache wget zip jq python make go git musl-dev
+RUN apk add --no-cache wget zip jq python make go git musl-dev openssh-client
 RUN cd /tmp &&\
 	wget $NOMAD_DOWNLOAD_URL &&\
 	unzip nomad*.zip &&\
